2011-08-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_errno): add ERFKILL & EHWPOISON

2011-08-02  Sam Steingold  <sds@gnu.org>

	fix bug#3384693: no warning when lambda is incompatible with arglist
	* compiler.lisp (inline-callable-function-lambda-p): call c-warn
	when the lambdalist is incompatible with the argument count

2011-08-02  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/aclocal.m4): run aclocal in src
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs:27763>

2011-08-02  Sam Steingold  <sds@gnu.org>

	fix bug#3384825: simple condition printing ignores user-supplied methods
	* condition.lisp (simple-condition): use :REPORT option instead of
	a PRINT-OBJECT :AROUND method

2011-08-01  Sam Steingold  <sds@gnu.org>

	fix recent breakage
	* socket.d (CLOSE) [win32]: define
	* win32.d (ioctl): define to ioctlsocket

2011-08-01  Sam Steingold  <sds@gnu.org>

	fix "clean" targets
	* makemake.in (anymodule): do not remove gllib; there is not such dir
	(clean1): do not remove build-aux, but do remove dynmod
	(clean5): remove modules.h and build-aux unless building in src
	(clean6): do not remove Makefile
	(clean7): depend on distclean-subdirs
	(clean-subdirs, distclean-subdirs): new targets
	(clean): depend on clean-subdirs
	* po/Makefile.in.in (distclean): remove Makefile.in

2011-08-01  Sam Steingold  <sds@gnu.org>

	* utils/txt2c.c (process_file): avoid a segfault by checking that
	standard_include_path is not NULL before accessing it

2011-08-01  Sam Steingold  <sds@gnu.org>

	revert the parts of the 2011-07-29 15496:d628d9ac3fce patch
	which broke the in-place build (in the src directory)
	* _clisp.c: include w32shell & execname with "", not <>
	* encoding.d: include nls_* with "", not <>
	* eval.d: include lightning with "", not <>
	* lispbibl.d: include version.h with "", not <>
	* modules.c: include lispbibl & clisp with "", not <>
	* spvw.d: include spvw_calendar.c with "", not <>

2011-08-01  Sam Steingold  <sds@gnu.org>