@@ -1,3 +1,7 @@
+2011-08-03  Sam Steingold  <sds@gnu.org>
+
+	* loop.tst: warn on REPEAT before FOR (bug#3384698)
+
 2011-08-02  Sam Steingold  <sds@gnu.org>
 
 	* conditions.tst: better argument checking of FUNCALL on
